--- a/package.json
+++ b/package.json
@@ -34,10 +34,12 @@
         "jquery-datatables-checkboxes": "1.2.14",
         "jquery-toast-plugin": "^1.3.2",
         "jsvectormap": "^1.6.0",
+        "laravel-echo": "^1.19.0",
         "leaflet": "^1.9.4",
         "lucide": "^0.414.0",
         "moment": "2.24.0",
         "nouislider": "^15.7.1",
+        "pusher-js": "^8.4.0",
         "quill": "^1.3.7",
         "rater-js": "^1.0.1",
         "sass": "1.77.6",
