--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
         "apexcharts": "^3.51.0",
         "bootstrap": "^5.3.3",
         "choices.js": "^11.0.2",
+        "datatables.net": "^2.3.4",
+        "datatables.net-bs5": "^2.3.4",
+        "datatables.net-responsive": "^3.0.7",
         "daterangepicker": "^3.1.0",
         "dragula": "^3.7.3",
         "dropzone": "^6.0.0-beta.2",
